# vibmon-gateway

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  PROTOCOL.md  README.md
cmake/toolchains/: aarch64-linux-gnu.cmake
include/: cobs.hpp  crc16.hpp  protocol.hpp  ring_buffer.hpp
scripts/: deploy.sh  run_with_simulator.sh  simulator.py
src/: db_writer.cpp  db_writer.hpp  fft_worker.cpp  fft_worker.hpp  frame_decoder.cpp  frame_decoder.hpp  http_server.cpp  http_server.hpp  main.cpp  serial_reader.cpp  serial_reader.hpp  websocket_server.cpp  websocket_server.hpp
systemd/: vibmon-gateway.service
tests/: CMakeLists.txt  test_cobs.cpp  test_crc16.cpp  test_ring_buffer.cpp
udev/: 99-vibmon.rules
